update edit cv page

--- a/server/student/templates/student/cv-version-1.html
+++ b/server/student/templates/student/cv-version-1.html
@@ -107,7 +107,7 @@
                             </div>
                             <div class="content">
                                 <p>{{exp.companyName}}</p>
-                                <p>{{exp.description}}</p>
+                                <p class="experienceDescription">{{exp.description}}</p>
                             </div>
                         </div>
                         {% endfor %}
