--- a/server/student/templates/student/edit_cv.html
+++ b/server/student/templates/student/edit_cv.html
@@ -1,43 +1,34 @@
 {% extends 'base.html'%} {% block header %}
 <script src="/static/student/components/edit_cv_page/edit_cv_page.js"></script>
-<link rel="stylesheet" type="text/css" href="/static/css/dynamic-fields.css" />
-{% endblock %} {% block content %} {% include
-'student/components/create_cv_page/education_modal.html' %} {% include
-'student/components/create_cv_page/work_experience_modal.html' %}
+<link rel="stylesheet" type="text/css" href="/static/css/dynamic-fields.css" /> {% endblock %} {% block content %} {% include 'student/components/create_cv_page/education_modal.html' %} {% include 'student/components/create_cv_page/work_experience_modal.html' %}
 
 <div class="container pt-3" style="margin-top: 100px">
-  {% for cvBasicInfo in cvBasic %}
-  <input type="hidden" id="cv-id" value="{{cvBasicInfo.id}}" />
-  <div class="card">
-    <div class="card-header">
-      <h5 class="mb-0">Edit CV</h5>
+    {% for cvBasicInfo in cvBasic %}
+    <input type="hidden" id="cv-id" value="{{cvBasicInfo.cvId}}" />
+    <div class="card">
+        <div class="card-header">
+            <h5 class="mb-0">Edit CV</h5>
+        </div>
+        <div class="card-body">
+            <div class="col-12 mb-3 d-flex justify-content-center">
+                <img class="rounded-circle" src="{{cvBasicInfo.profileIcon}}" style="width: 100px; height: 100px; object-fit: cover" id="icon-preview" />
+            </div>
+            <div class="col-12 mb-3">
+                <label class="form-label" for="profileIcon">Upload your portrait</label>
+                <input type="file" class="form-control" id="profileIcon" />
+            </div>
+        </div>
     </div>
-    <div class="card-body">
-      <div class="col-12 mb-3 d-flex justify-content-center">
-        <img
-          class="rounded-circle"
-          src="{{cvBasicInfo.profileIcon}}"
-          style="width: 100px; height: 100px; object-fit: cover"
-          id="icon-preview"
-        />
-      </div>
-      <div class="col-12 mb-3">
-        <label class="form-label" for="profileIcon">Upload your portrait</label>
-        <input type="file" class="form-control" id="profileIcon" />
-      </div>
-    </div>
-  </div>
 
-  <br />
+    <br />
 
-  <div class="card">
-    <div class="card-header">
-      <h5 class="mb-0">Edit Cv</h5>
-    </div>
-    <div class="card-body">
-      <div class="mb-3">
-        <label for="cv-name" class="form-label"
-          ><strong>Your CV Name</strong></label
+    <div class="card">
+        <div class="card-header">
+            <h5 class="mb-0">Edit Cv</h5>
+        </div>
+        <div class="card-body">
+            <div class="mb-3">
+                <label for="cv-name" class="form-label"><strong>Your CV Name</strong></label
         >
         <input
           type="email"
@@ -116,12 +107,7 @@
 
       <div class="mb-3">
         <label for="bio" class="form-label"><strong>Bio</strong></label>
-        <textarea
-          class="form-control"
-          id="bio"
-          rows="3"
-          placeholder="Share some information about yourself."
-        >
+                <textarea class="form-control" id="bio" rows="3" placeholder="Share some information about yourself.">
 {{cvBasicInfo.aboutMe}}</textarea
         >
       </div>
@@ -332,12 +318,12 @@
 
   var edus = {{education | safe}}
   var exps = {{experience | safe}}
-  console.log(exps)
+  console.log(edus)
 
   for (let i = 0; i < edus.length; i++) {
-      educations.push({ "institution": edus[i].schoolName, "program": edus[i].major, "startDate": edus[i].start_date, "endDate": edus[i].end_date })
+      educations.push({ "eduID":edus[i].id,"institution": edus[i].schoolName, "program": edus[i].major, "startDate": edus[i].start_date, "endDate": edus[i].end_date })
   }
-
+  console.log(educations)
   for (let i = 0; i < exps.length; i++) {
       workExperiences.push({ "companyName": exps[i].companyName, "description": exps[i].description, "startDate": exps[i].start_date, "endDate": exps[i].end_date })
   }
@@ -350,6 +336,7 @@
                   <div class="card-body">
                       <div class="row">
                           <div class="col-9">
+                              <div hidden="hidden">${education.eduID}</div>
                               <h5 class="card-title"><i class="fa-solid fa-building-columns"></i> ${education.institution}</h5>
                               <h6 class="text-secondary"><strong>${education.program}</strong></h6>
                               <h6 class="text-secondary">${education.startDate} to ${education.endDate}</h6>
