--- a/server/manager/templates/manager/components/navside.html
+++ b/server/manager/templates/manager/components/navside.html
@@ -56,7 +56,7 @@
             </g>
           </svg>
         </span>
-        <span class="app-brand-text demo menu-text fw-bolder ms-2">Sneat</span>
+        <span class="app-brand-text demo menu-text fw-bolder ms-2">HKBU</span>
       </a>
 
       <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
@@ -129,8 +129,8 @@
       </li>
 
 
-      <li class="menu-item">
-        <a href="index.html" class="menu-link">
+      <li class="menu-item" id="sidenav-jobs">
+        <a href="/manager/jobs" class="menu-link">
             <i class='menu-icon tf-icons bx bxs-data bx-flip-horizontal' ></i>
             <div data-i18n="Analytics">Jobs</div>
         </a>
