edit cv finished

--- a/server/student/templates/student/edit_cv.html
+++ b/server/student/templates/student/edit_cv.html
@@ -194,7 +194,7 @@
       {% for language in languages %}
       <input
         type="text"
-        name="survey_options[]"
+        name="lanuage[]"
         class="survey_options skillBox"
         size="50"
         placeholder="language"
